# libsdl-org-Maelstrom

./: .gitignore  CMakeLists.txt  Maelstrom-netd.c  controls.cpp  fastrand.cpp  init.cpp  main.cpp  readme.adoc  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
dev/asan/: Maelstrom.asan.supp
dev/asan/logs/: Maelstrom.asan.log.26634  Maelstrom.asan.log.5079  Maelstrom.asan.log.5742
dev/docs/: cicn.adoc  cmake.adoc  devcontainer.adoc  docker.adoc  git.adoc  issues.adoc  network.adoc  pulseaudio.adoc  testing.adoc  todos.adoc
dev/doxygen/: .gitignore  Doxyfile  Doxyfile.bak  readme.adoc
dev/emscripten/: .gitignore  install.sh  readme.adoc
dev/emscripten/asyncify/: readme.adoc
dev/emscripten/docs/: python.adoc  sdl.adoc  vtk.adoc  wasi.adoc  wasm.adoc
dev/emscripten/hello/: CMakeLists.txt  build.sh  hello.cpp
dev/emscripten/sdl/sdl2/: readme.adoc
dev/emscripten/sdl/sdl2/hello/: CMakeLists.txt  hello.cpp  serve.py  vcpkg.json
dev/emscripten/sdl/sdl3/: readme.adoc
dev/emscripten/sdl/sdl3/examples/: .gitignore  CMakeLists.txt  build.sh  issues.adoc  readme.adoc  serve.py  vcpkg.json
dev/emscripten/sdl/sdl3/examples/assets/: readme.adoc
dev/emscripten/sdl/sdl3/examples/audio/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/audio/01-simple-playback/: CMakeLists.txt  issues.adoc
dev/emscripten/sdl/sdl3/examples/audio/02-simple-playback-callback/: CMakeLists.txt  issues.adoc
dev/emscripten/sdl/sdl3/examples/audio/03-load-wav/: CMakeLists.txt  load-wav.c
dev/emscripten/sdl/sdl3/examples/audio/05-planar-data/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/camera/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/camera/01-read-and-draw/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/demo/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/demo/01-snake/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/demo/02-woodeneye-008/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/demo/03-infinite-monkeys/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/demo/04-bytepusher/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/input/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/input/01-joystick-polling/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/input/02-joystick-events/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/input/03-gamepad-polling/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/input/04-gamepad-events/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/misc/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/misc/01-power/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/misc/02-clipboard/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/pen/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/pen/01-drawing-lines/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/01-clear/: CMakeLists.txt  issues.adoc
dev/emscripten/sdl/sdl3/examples/renderer/02-primitives/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/03-lines/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/04-points/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/05-rectangles/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/06-textures/: CMakeLists.txt  textures.c
dev/emscripten/sdl/sdl3/examples/renderer/07-streaming-textures/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/08-rotating-textures/: CMakeLists.txt  rotating-textures.c
dev/emscripten/sdl/sdl3/examples/renderer/09-scaling-textures/: CMakeLists.txt  scaling-textures.c
dev/emscripten/sdl/sdl3/examples/renderer/10-geometry/: CMakeLists.txt  geometry.c
dev/emscripten/sdl/sdl3/examples/renderer/11-color-mods/: CMakeLists.txt  color-mods.c
dev/emscripten/sdl/sdl3/examples/renderer/14-viewport/: CMakeLists.txt  viewport.c
dev/emscripten/sdl/sdl3/examples/renderer/15-cliprect/: CMakeLists.txt  cliprect.c
dev/emscripten/sdl/sdl3/examples/renderer/17-read-pixels/: CMakeLists.txt  read-pixels.c
dev/emscripten/sdl/sdl3/examples/renderer/18-debug-text/: CMakeLists.txt
dev/emscripten/sdl/sdl3/examples/renderer/19-affine-textures/: CMakeLists.txt  affine-textures.c
dev/emscripten/sdl/sdl3/hello/: build.sh  hello.cpp
dev/emscripten/vcpkg/hello/: CMakeLists.txt  build.sh  hello.cpp  readme.adoc  vcpkg.json
dev/graphviz/: Maelstrom.dot  Maelstrom.dot.Catch2Catch2.dependers  Maelstrom.dot.Catch2Catch2WithMain  Maelstrom.dot.Catch2Catch2WithMain.dependers  Maelstrom.dot.Maelstrom  Maelstrom.dot.SDL2SDL2-static.dependers  Maelstrom.dot.SDL2SDL2main.dependers  Maelstrom.dot.SDL2_netSDL2_net-static.dependers  Maelstrom.dot.SDLmac  Maelstrom.dot.SDLmac.dependers  Maelstrom.dot.SDLscreen  Maelstrom.dot.SDLscreen.dependers  Maelstrom.dot.logic  Maelstrom.dot.logic.dependers  Maelstrom.dot.macres  Maelstrom.dot.misc  Maelstrom.dot.misc.dependers  Maelstrom.dot.playwave  Maelstrom.dot.snd2wav  Maelstrom.dot.test_factorial  Maelstrom.dot.test_fibonacci  Maelstrom.dot.test_game_loop_01  Maelstrom.dot.test_game_loop_02  Maelstrom.dot.test_misc  Maelstrom.dot.test_misc.dependers  Maelstrom.dot.test_vector  readme.adoc
dev/mkdocs/: readme.adoc
dev/scripts/automake/: build.sh
dev/scripts/cmake/: build.sh  readme.adoc
dev/sphinx/: .gitignore  readme.adoc
dev/sphinx/source/: conf.py  index.rst
dev/valgrind/: Maelstrom.valgrind.supp
maclib/: CMakeLists.txt  Mac_Resource.cpp  Mac_Sound.cpp  applefile.h  snd2wav.cpp
netlogic/: CMakeLists.txt  game.cpp
screenlib/: CMakeLists.txt  SDL_FrameBuf.cpp
tests/: CMakeLists.txt  readme.adoc
tests/examples/: CMakeLists.txt  test_factorial.cpp  test_fibonacci.cpp  test_vector.cpp
tests/game_loop/: CMakeLists.txt  test_main.cpp
tests/game_loop/test_game_loop_01/: CMakeLists.txt  test_game_loop_01.cpp
tests/game_loop/test_game_loop_02/: CMakeLists.txt  test_DoInitializations.cpp  test_game_loop_02.cpp
tests/game_loop/test_game_loop_02/test_misc/: CMakeLists.txt  test_init.cpp
