add_subdirectory(01-clear)
add_subdirectory(02-primitives)
add_subdirectory(03-lines)
add_subdirectory(04-points)
add_subdirectory(05-rectangles)
add_subdirectory(06-textures)
add_subdirectory(07-streaming-textures)
add_subdirectory(08-rotating-textures)
add_subdirectory(09-scaling-textures)
add_subdirectory(10-geometry)
add_subdirectory(11-color-mods)
add_subdirectory(14-viewport)
add_subdirectory(15-cliprect)
add_subdirectory(17-read-pixels)
add_subdirectory(18-debug-text)
add_subdirectory(19-affine-textures)
